@@ -73,5 +73,6 @@ D(OP_LootItem)
 D(OP_TributeItem)
 D(OP_ReadBook)
 D(OP_AugmentInfo)
+D(OP_FaceChange)
 #undef E
 #undef D
